[metadata]
name = flake8-isort
version = 6.1.1.dev0
author = Gil Forcada
author_email = gil.gnome@gmail.com
license = GPL version 2
description = flake8 plugin that integrates isort .
keywords = pep8, flake8, python, isort, imports
url = https://github.com/gforcada/flake8-isort
long_description = file:README.rst

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Software Development :: Quality Assurance

[options]
py_modules = flake8_isort
zip_safe = False
install_requires = flake8; isort >= 5.0.0, <6
include_package_data = True
python_requires = >=3.8
test_suite = run_tests

[options.entry_points]
flake8.extension = I00 = flake8_isort:Flake8Isort

[options.extras_require]
test = pytest

[zest.releaser]
create-wheel = yes

[check-manifest]
ignore =
    .installed.cfg

[isort]
profile = black
